--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <img src="./image/hero-developer.png" alt="" />
         <h1 class="share-h1">"In 2025, I hope to become a Developer."</h1>
         <p class="share-p">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text.
+          ২০২৫ সালের মধ্যে আমি একজন দক্ষ, আত্মবিশ্বাসী ও যোগ্য ডেভেলপার হতে চাই।
+          আমি এমন একজন ডেভেলপার হতে চাই, যে বাস্তব জীবনের সমস্যার সমাধান করতে
+          পারে এবং অর্থবহ ও গুরুত্বপূর্ণ প্রজেক্টে অবদান রাখতে সক্ষম। এই লক্ষ্যে
+          পৌঁছানোর জন্য আমি প্রতিদিন নিয়মিত শেখার চেষ্টা করছি এবং নিজের দক্ষতা
+          উন্নত করছি।
         </p>
         <button>Let’s Connect</button>
       </section>
@@ -39,16 +42,23 @@
         <div>
           <h1 class="share-h1">Why Web Development??</h1>
           <p class="share-p">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text.
+            ওয়েব ডেভেলপমেন্ট সেক্টরটা আমার খুব ভালো লাগে। এই বিষয়ে কাজ করতে
+            আমার দারুণ ভালো লাগে এবং আমি এটি খুব উপভোগ করি। আমি মনে করি, এই
+            ফিল্ডে আমি একটি ভালো ক্যারিয়ার গড়ে তুলতে পারব। ওয়েব ডেভেলপমেন্ট
+            শেখার সময় আমি নতুন জিনিস শিখতে পারি এবং নিজের মধ্যে আত্মবিশ্বাস
+            তৈরি হয়। ভবিষ্যতে একজন দক্ষ ওয়েব ডেভেলপার হয়ে ভালো কিছু করার
+            ইচ্ছা আছে আমার।
           </p>
         </div>
         <div class="working-section">
           <div class="working-div">
             <h1 class="">I will Do Coding and Change The World</h1>
             <p class="">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
+              আমি আমার দেশ এবং দেশের মানুষের জন্য কিছু করতে চাই। আমি চাই আমার
+              কাজ দিয়ে দেশের উন্নতি হবে এবং মানুষের জীবন ভালো হবে। আমার লক্ষ্য
+              শুধু নিজেকে নয়, আমার দেশের ভবিষ্যত গড়াই। তাই আমি কঠোর পরিশ্রম করে
+              দক্ষতা অর্জন করছি, যাতে someday দেশের জন্য সত্যিকারের কিছু বড় কাজ
+              করতে পারি।
             </p>
             <button>Let’s Discuss</button>
           </div>
@@ -62,8 +72,10 @@
         <div>
           <h1 class="share-h1">My Inspiration</h1>
           <p class="share-p">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text.
+            আমার সবচেয়ে বড় অনুপ্রেরণার একজন হলেন ঝংকার মাহবুব ভাই। তাঁর
+            শেখানোর স্টাইল, পরিশ্রম এবং সফলতার গল্প আমাকে অনেক অনুপ্রাণিত করে।
+            তিনি কঠিন বিষয়গুলোকে সহজভাবে উপস্থাপন করেন, যা আমাকে শেখার আগ্রহ ও
+            আত্মবিশ্বাস দেয়। আমি তাঁর পথ অনুসরণ করে একজন ভালো ডেভেলপার হতে চাই।
           </p>
         </div>
         <div class="video-div">
